src/test/resources/failing/fail51.pnd
@type(opt = true) Animal
@type Cat : Animal

@constructor byNum[x] = y : int, Cat